force-app/main/default/objects/Integration_Service__c/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Authentication</fullName>
            </value>
            <value>
                <fullName>Authorization Code</fullName>
            </value>
            <value>
                <fullName>JWT Bearer Token</fullName>
            </value>
            <value>
                <fullName>Client Credentials</fullName>
            </value>
            <value>
                <fullName>SAML</fullName>
            </value>
            <value>
                <fullName>Connected Apps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>