force-app/main/default/objects/Integration_Service__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External System</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Bi-directional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>