force-app/main/default/objects/Integration_Service__c/fields/JIRA__c.field-meta.xml
<CustomField>
    <fullName>JIRA__c</fullName>
    <label>JIRA</label>
    <type>Url</type>
</CustomField>