force-app/main/default/objects/Integration_Service__c/fields/Product_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Product_Documentation__c</fullName>
    <label>Product Documentation</label>
    <type>Url</type>
</CustomField>