force-app/main/default/objects/Integration_Service__c/fields/Support_Site__c.field-meta.xml
<CustomField>
    <fullName>Support_Site__c</fullName>
    <label>Support Site</label>
    <type>Url</type>
</CustomField>